# invoice-agent-stack

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  fly.toml  pyproject.toml  vercel.json
browser_orchestration/: __init__.py  browser_use_adapter.py  harness_adapter.py  models.py  queue.py  schedule.py  server.py  validator.py  vault.py  worker.py
cash_recon/: __init__.py  bundler.py  entity_resolution.py  features.py  models.py  ranker.py  server.py  service.py  synth.py
demo_portal/: server.py
docs/: architecture.md
ops_dashboard/: __init__.py  api.py
ops_dashboard/web/: .env.example  .env.production  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
ops_dashboard/web/public/snapshot/: kpis.json  payer-acme-timeline.json  payer-acme-trust.json  payer-acme.json  payer-globex-timeline.json  payer-globex-trust.json  payer-globex.json  payer-zenith-timeline.json  payer-zenith-trust.json  payer-zenith.json  payers.json
ops_dashboard/web/src/app/: globals.css  layout.tsx  page.tsx
ops_dashboard/web/src/components/: Brand.tsx  (+8 more)
scripts/: browser_demo.py  cash_recon_demo.py  clear_demo_events.py  export_dashboard_snapshot.py  random_outbound_call.py  run_browser_full_loop.py  run_browser_use_demo.py  run_dashboard.py  seed_demo.py  seed_portals.py  seed_recon.py  seed_unified_demo.py  sync_plaid.py  voice_repl.py
shared/: db.py  models.py  trust_engine.py
tests/: conftest.py  test_compliance.py  test_memory.py  test_orchestrator.py  test_server.py  test_signals.py  test_state_machine.py  test_trust_engine.py
tests/browser_orchestration/: test_browser_use_adapter.py  test_queue.py  test_schedule.py  test_server.py  test_validator.py  test_vault.py  test_worker.py
tests/cash_recon/: test_bundler.py  test_entity_resolution.py  test_features.py  test_ranker.py  test_server.py  test_service.py  test_synth.py
voice_agent/: compliance.py  llm.py  memory.py  memory_models.py  orchestrator.py  prompts.py  server.py  session.py  signals.py  state_machine.py
(+3 files in other folders)
