[project]
name = "invoice-agent-stack"
version = "0.0.1"
description = "Three-vertical agent stack for invoice financing: voice collections, browser orchestration, cash reconciliation."
requires-python = ">=3.12,<3.14"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "sqlmodel>=0.0.22",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "langgraph>=0.2.50",
    "langchain-anthropic>=0.3.0",
    "cryptography>=43.0.0",
    "pydantic>=2.9.0",
    "xgboost>=2.1.0",
    "scikit-learn>=1.5.0",
    "rapidfuzz>=3.10.0",
    "numpy>=2.0.0",
    "plaid-python>=27.0.0",
]

[project.optional-dependencies]
# Heavy / optional integrations. Install only when enabling the real
# browser harness path: `uv sync --extra real-browser`.
real-browser = [
    "browser-use>=0.2.0",
    "playwright>=1.49.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
